# api

./: .dockerignore  .editorconfig  .env-example  .gitignore  .golangci.yaml  .mypy.ini  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile-migrations  LICENSE  Makefile  Pipfile  README.md  alembic.ini  compose.yaml  docker-compose-prod.yaml  docker-compose-prod.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  go.mod  go.sum  nginx.conf-example  pyproject.toml  pytest.ini  scanapi.conf
.github/workflows/: dockerbuild.yaml  dockerbuild.yml  dockerimage.yml
.serena/: project.yml
alembic/versions/: 530dca8e7ee4_create_images_table.py  cb397364ed10_create_users_table.py
application/: __init__.py  db.py
application/routers/: auth.py  images.py
assets/: app.css  app.js
auth/: auth_test.go  jwt.go  password.go
cmd/: main.go
config/: config.go
db/: db.go  migrate.go
domain/auth/actions/: login_action.py  register_action.py
domain/auth/exceptions/: auth.py
domain/auth/models/: user.py
domain/auth/repositories/: user.py
domain/images/actions/: delete_image.py  save_image.py
domain/images/dto/: image.py
domain/images/models/: image.py
domain/images/repositories/: image.py
http/: auth.go  images.go  middleware.go  pages.go  server.go  server_test.go
migrations/: 000001_init.down.sql  000001_init.up.sql  000002_remove_private.down.sql  000002_remove_private.up.sql
pages/: auth.templ  auth_templ.go  images.templ  images_templ.go  layout.templ  layout_templ.go  templrenderer.go
pyazo_api/: alembic.ini  entrypoint.sh  env.sample  migrate.py  run.py  seed.py
pyazo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyazo_api/alembic/: env.py
pyazo_api/alembic/versions/: 29dfe923c3ed_added_private_image.py  530dca8e7ee4_create_images_table.py  bf84b9a0b35f_add_created_at_field_to_images_table.py  cb397364ed10_create_users_table.py  d29dc787ec12_create_shares_table.py
pyazo_api/application/: __init__.py  db.py
pyazo_api/application/routers/: auth.py  images.py  private_static.py  (+2 more)
pyazo_api/config/: __init__.py  db.py  jwt.py  routes.py  settings.py
pyazo_api/util/: auth.py  base_repository.py  db.py  http_exceptions.py  json_resource.py  pagination.py
scanapi/: report.html  spec.yaml
tests/: conftest.py  test_images.py  test_shares.py
util/: auth.py  db.py
(+33 files in other folders)
