[project]
name = "pyazo_api"
version = "0.1.0"
description = "Screenshot upload service"
authors = [{ name = "Jelena Dokic", email = "jelena.dpk@gmail.com" }]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.13"
dependencies = [
    "Pillow==12.0.0",
    "aiofiles==25.1.0",
    "argon2-cffi==25.1.0",
    "fastapi==0.123.5",
    "passlib==1.7.4",
    "psycopg[pool]==3.3.1",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.1",
    "types-passlib==1.7.7.20250602",
    "types-pillow==10.2.0.20240822",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
